--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,11 @@
 
         </activity>
         <activity
+            android:name=".ContactListActivity"
+            android:label="@string/app_name" >
+
+        </activity>
+        <activity
             android:name=".RouteActivity"
             android:label="@string/app_name" >
             <intent-filter>
